# iaml-iwildcam2019

./: .gitignore  README.md  README.rst  pyproject.toml
src/iwildcam/: config.py  metadata.py  paths.py
src/iwildcam/cli/: explore.py
tests/: test_iwildcam.py
