[tool.poetry]
name = "iwildcam"
version = "0.1.0"
description = ""
authors = ["LukeMathWalker <lucapalmieri1993@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lazydata = "^1.0"
pillow = "^6.0"
click = "^7.0"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
